sumo/tests/sumo/spec/flow/errors/repetition_missing/errors.sumo
Error: At least one of 'period', 'vehsPerHour', and 'no' is needed in flow 'f1'.
Quitting (on error).
